@@ -77,7 +77,7 @@ return [
         
     ],
     'params' => [
-        'version'=>'2.0.10.14',
+        'version'=>'2.0.10.15',
 		// this is used in contact page
 		'adminEmail' => 'egoweb-support@rand.org',
 		// The max login attempt before showing captcha
